# agentarea

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.json  A2A_COMPLETE_IMPLEMENTATION.md  A2A_COMPLIANCE_FIXES.md  A2A_FINAL_ARCHITECTURE.md  A2A_IMPLEMENTATION_SUMMARY.md  A2A_STANDARD_COMPLIANCE.md  ACTIVITY_DI_REFACTORING.md  AGENTS.md  AgentArea_Platform_Overview.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLI_ENHANCED_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  E2E_TEST_GUIDE.md  FLOW_VERIFICATION_SUMMARY.md  LICENSE.md  METADATA_SERIALIZATION_FIX_SUMMARY.md  PR_DESCRIPTION.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY.md  SUBDOMAIN_PROXY_PLAN.md  SUPPORT.md  SYNC_RUNNER_SUMMARY.md  TASK_WORKFLOW_FIX_SUMMARY.md  UNIFIED_RUNNERS_SUMMARY.md  WORKER_FIX_SUMMARY.md  a2a_client_sdk.py  a2a_compliance_audit.py  agent_test.py  api_endpoint_verification.py  api_endpoint_verification_results.json  comprehensive_task_workflow_test.py  comprehensive_task_workflow_test_results.json  (+49 more)
catalogue/: .gitignore  Dockerfile  README.md  docker-compose.yaml  init-aws.sh  pyproject.toml
catalogue/alembic/: env.py
catalogue/alembic/versions/: add_sources_table.py  create_llm_tables.py  create_tool_tables.py  initial_migration.py
catalogue/src/: cli.py
catalogue/src/app/: config.py  main.py  models.py  schemas.py  services.py
core/: .pyright_report.json  .secrets.json  .secrets.key  CONNECTION_MANAGEMENT_SUMMARY.md  FUNCTIONAL_TEST_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  SSE_IMPLEMENTATION_SUMMARY.md  SSE_REAL_TEST_INSTRUCTIONS.md  SSE_STREAMING_IMPLEMENTATION.md  TESTING_GUIDE.md  WORKSPACE_ISOLATION_TEST_SUMMARY.md  api_compatibility_report.json  api_compatibility_results.json  cli.py  debug_agent_context.py  debug_metadata.py  debug_metadata_test.py  debug_streaming_vs_nonstreaming.py  debug_tool_mismatch.py  debug_workflow_completion.py  demo_cli_functionality.sh  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.temporal.yml  docker-compose.yml  functional_test_results.json  improvements_tasks.md  logging_config.yaml.example  main.py  pyproject.toml  pytest.ini  run_tests.py  service_compatibility_results.json  start_temporal_server.sh  start_temporal_stack.sh  test_activities_unit.py  test_activity_debug.py  (+33 more)
core/agentarea/: config.py  main.py  startup.py
core/agentarea-worker/: main.py
core/agentarea/workflows/: __init__.py  agent_task_workflow.py  agent_task_workflow_clean.py  temporal_di.py  temporal_worker.py
core/alembic/: env.py
core/alembic/versions/: 1df4475ca99b_add_cmd_field_to_mcp_servers_table.py  8954caa2c0f6_initial_revision.py  a453b332ab0d_add_provider_type_to_mcp_server_.py  add_env_schema_to_mcp_servers.py  b5ce5d3145b5_fix_agents_fields.py  c6d7e8f9a0b1_add_instruction_fix_planning.py  create_model_tables.py  d7e8f9a0b1c2_merge_heads.py  llm_providers_fk_migration.py
core/api/routes/: mcp.py  providers.py
core/api/schemas/: provider_schema.py
core/apps/api/: Dockerfile  README.md  pyproject.toml  test_jwt_auth.py
core/apps/cli/: pyproject.toml
core/apps/worker/: Dockerfile  pyproject.toml
core/docs/: SYSTEM_ARCHITECTURE.md  about.md  auth_context_dependency.md  dependency_injection_updates.md  env.example  task_service_refactoring_documentation.md
core/docs/architecture/: extensible_event_system.md
core/examples/: auth_dependency_example.py  frontend_real_time_events.html
core/libs/agentarea-agents-sdk/: DECORATOR_TOOLS_GUIDE.md  pyproject.toml
core/libs/agents/: pyproject.toml
core/libs/chat/: pyproject.toml
core/libs/common/: pyproject.toml
core/libs/context/: pyproject.toml
core/libs/execution/: MULTI_AGENT_DESIGN.md  TEMPORAL_BACKBONE_SOLUTION.md  TEMPORAL_INTEGRATION_READY.md  USER_CONTEXT_APPROACHES.md  pyproject.toml  test_complete_interception.py  test_custom_agent_execution.py  test_end_to_end_proof.py  test_google_adk.py  test_interception_proof.py  test_message_hierarchy.py  test_monkey_patch_proof.py  test_prompt_improvements.py  test_reasoning_improvements.py  test_simple_interception.py  test_temporal_activity_direct.py  test_temporal_adk_agent.py  test_temporal_backbone_standalone.py  test_workflow_message_fix.py  test_working_interception.py  verify_react_usage.py
core/libs/llm/: pyproject.toml
core/libs/mcp/: pyproject.toml
core/libs/secrets/: pyproject.toml
core/libs/tasks/: pyproject.toml
core/libs/triggers/: TRIGGER_EXECUTION_ENGINE_IMPLEMENTATION.md  pyproject.toml
core/scripts/: diagnose_production_llm.py  diagnose_workflow.py  test_production_fix.py  test_real_workflow.py
core/src/app/: main.py
core/test_data/: context_index.faiss  context_metadata.json
core/tests/: README.md  conftest.py  run_adk_workflow_tests.py  run_trigger_integration_tests.py  test_presigned_url.py
core/tests/integration/: comprehensive_e2e_test.py  run_a2a_integration_tests.py  test_a2a_agent_discovery.py  test_a2a_agent_discovery_integration.py  test_a2a_real_api.py  test_a2a_real_integration.py  test_a2a_streaming.py  test_a2a_task_execution_comprehensive.py  test_a2a_task_management.py  test_a2a_working.py  test_adk_agent_workflow_comprehensive.py  test_adk_temporal_demo.py  test_adk_workflow_integration.py  test_adk_workflow_with_tools.py  test_adk_workflow_worker.py  test_agent_mcp_e2e.py  test_agent_ollama.py  test_agent_runner_service_simple.py  test_agent_simple.py  test_agent_task_workflow.py  test_api_compatibility.py  test_cli.py  test_cli_workflow_sse_integration.py  test_container_monitoring.py  test_context_embeddings.py  test_cross_workspace_access_prevention.py  test_e2e_main_flow.py  test_e2e_working.py  (+49 more)
experiments/mcp-ozon/: README-fastmcp.md  README.md  mock-mcp.py  pyproject.toml  rest-to-mcp-fastmcp.py  test_calls.py
mcp-hub/: Dockerfile  main.py  mcp_servers.yaml  process.py  process2.py  pyproject.toml
mcp-hub/mcp-hub/: config.py  docker_manager.py  orchestrator.py  process_manager.py  stdio_transport.py
workflow-constructor/: pyproject.toml
workflow-constructor/tools/: __init__.py  agent_tools.py
(+1293 files in other folders)
