[project]
name = "core"
version = "0.1.0"
authors = [
    { name="Artem Astapenko", email="artem.astapenko@agentarea.ai" },
    { name="Julia Astapenko", email="julia.astapenko@agentarea.ai" },
    { name="Alex Boyko", email="alex.boyko@agentarea.ai" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "uvicorn>=0.34.0",
    "fastapi>=0.104.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.2",
    "pyyaml>=6.0.1",
    "boto3>=1.34.0",
    "pydantic-settings>=2.0.0",
    "botocore>=1.36.16",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "click>=8.1.8",
    "asyncpg>=0.30.0",
    "infisicalsdk>=1.0.8",
    "returns>=0.25.0",
]

[tool.uv.workspace]
members = ["venv"]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "pyright>=1.1.400",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings 
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
]
ignore = [
    "D102",
    "D107",
    "D101",
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # One blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
