[project]
name = "mcp-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.4.0",
    "psycopg[binary]>=3.2.7",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "redis>=6.0.0",
    "uvicorn>=0.34.2",
    "watchfiles>=1.0.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings 
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
]
ignore = [
    "D102",
    "D107",
    "D101",
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # One blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
