[project]
name = "mcp-ozon"
version = "0.1.0"
description = "ADK agent that connects to MCP Web tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk",
    "python-dotenv",
    "fastmcp>=2.0.0",
    "httpx",
    "fastapi",
    "uvicorn",
    "pydantic",
    # "pydantic-json-schema",
    # "pydantic-json-schema-fastapi",
    "mcp[cli]",
    "litellm==1.63",
    "dotenv>=0.9.9",
]
