[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarea-api"
version = "0.1.0"
description = "AgentArea API application"
requires-python = ">=3.12"
dependencies = [
    "agentarea-common",
    "agentarea-agents",
    "agentarea-chat",
    "agentarea-llm",
    "agentarea-mcp",
    "agentarea-tasks",
    "agentarea-secrets",
    "alembic>=1.15.2",
    "uvicorn>=0.34.0",
    "fastapi>=0.104.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "boto3>=1.34.0",
    "botocore>=1.36.16",
    "click>=8.1.8",
    "greenlet>=3.1.1",
    "google-adk>=1.1.1",
    "faststream[kafka,redis]>=0.5.42",
    "pytz>=2025.2",
]

[tool.uv.sources]
agentarea-common = { workspace = true }
agentarea-agents = { workspace = true }
agentarea-chat = { workspace = true }
agentarea-llm = { workspace = true }
agentarea-mcp = { workspace = true }
agentarea-tasks = { workspace = true }
agentarea-secrets = { workspace = true }

[project.scripts]
agentarea-api = "agentarea_api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agentarea_api"] 
