[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarea-chat"
version = "0.1.0"
description = "Chat functionality for AgentArea"
requires-python = ">=3.12"
dependencies = [
    "agentarea-common",
    "pydantic>=2.4.2",
]

[tool.uv.sources]
agentarea-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["agentarea_chat"] 