[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-mcp"
version = "0.1.0"
description = "Simple MCP Context7 Server"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]
requires-python = ">= 3.11"

[tool.uv]
dev-dependencies = [] 